--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -150,6 +150,8 @@ form input[type="text"], form input[type="email"], form input[type="password"], 
   background: url(/files/preview/STEAKGRILL-LOGA-2017.png) 50% no-repeat;
   background-size: contain;
 }
+#content > .hdesc.about_us h1:after,
+#content > .hdesc.contact h1:after,
 #content > .hdesc.o_nas h1:after,
 #content > .hdesc.kontakty h1:after {
   background-image: url("/files/personal2.jpg");
@@ -160,6 +162,7 @@ form input[type="text"], form input[type="email"], form input[type="password"], 
   margin-left: auto;
   margin-right: auto;
 }
+#content > .hdesc.contact h1:after,
 #content > .hdesc.kontakty h1:after {
   background-image: url("/files/steakgrill.jpg");
   background-size: cover;
