--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -6,7 +6,30 @@ body {
 .wf-active body {
   font-family: 'Cormorant Garamond', serif;
 }
+.wf-active h1 {
+  font-family: Roboto, sans-serif;
+}
 strong {
   font-weight: 600;
+}
+/*********************************/
+h1 {
+  font-size: 4em;
+}
+h2 {
+  font-weight: 600;
+  font-size: 2.7em;
+}
+h2 + p {
+  font-style: italic;
+  font-size: 1.5em;
+}
+p.sep:after {
+  content: "";
+  display: block;
+  width: 1.25em;
+  height: 0.3em;
+  background: url("/files/design/sep.png") no-repeat;
+  background-size: contain;
 }
 /*********************************/
