--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 /*********************************/
 body {
+  font-family: serif;
+}
+h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 .wf-active body {
