--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -20,9 +20,9 @@ h1 {
   font-size: 4em;
   font-weight: 500;
 }
-h2 {
+h2, h3 {
   font-weight: 600;
-  font-size: 2.7em;
+  font-size: 2.5em;
 }
 h2 + p,
 h3 + p {
