--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -19,15 +19,20 @@ strong {
 h1 {
   font-size: 4em;
   font-weight: 500;
+  text-align: center;
 }
 h2, h3 {
   font-weight: 600;
   font-size: 2.5em;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 h2 + p,
 h3 + p {
   font-style: italic;
   font-size: 1.5em;
+  margin-top: 1rem;
+  text-align: center;
 }
 p.sep:after {
   content: "";
@@ -36,9 +41,14 @@ p.sep:after {
   height: 0.3em;
   background: url("/files/design/sep.png") no-repeat;
   background-size: contain;
+  margin: 1rem auto;
 }
 /*********************************/
 .globalmenu li:first-child {
   display: none !important;
+}
+/*********************************/
+#jaroslav_honzajk + p {
+  max-width: 14em;
 }
 /*********************************/
