--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -10,7 +10,8 @@ h1 {
   font-family: 'Cormorant Garamond', serif;
 }
 .wf-active .contentlink-bc,
-.wf-active h1 {
+.wf-active h1,
+.wf-active .button {
   font-family: Roboto, sans-serif;
 }
 strong {
@@ -22,9 +23,14 @@ strong {
 }
 /*********************************/
 h1 {
-  font-size: 4em;
+  font-size: 3em;
   font-weight: 400;
   text-align: center;
+}
+@media all and (min-width: 25em) {
+  h1 {
+    font-size: 4em;
+  }
 }
 h2, h3 {
   font-weight: 600;
@@ -91,5 +97,58 @@ p.sep:after {
 .logo img {
   margin-top: -3em;
   position: relative;
+}
+/*********************************/
+#content .button {
+  font-size: 0.75em;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 1em 0;
+  border-radius: 0.25em;
+  transition: 0.25s ease-out;
+  color: black;
+}
+#content .button-list {
+  list-style: none;
+  margin: 4em 0;
+}
+.button-list li {
+  margin: 0;
+}
+.button-list li a {
+  width: 100%;
+}
+.button-img {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.button-img svg {
+  flex: 0 1 100%;
+  font-size: 3rem;
+  margin-bottom: 0.25em;
+  color: #b6150d;
+}
+svg.fa-facebook {
+  color: #3C5A99;
+}
+@media all and (min-width: 25em) {
+  #content .button {
+    box-shadow: 0 0.1em 0.1em 0 rgba(0,0,0,.14), 0 0.15em 0.05em -0.1em rgba(0,0,0,.12), 0 0.05em 0.25em 0 rgba(0,0,0,.2);
+  }
+  #content .button-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .button-list li {
+    margin: 0.5em;
+  }
+  #content .button:hover,
+  #content .button:active,
+  #content .button:focus {
+    outline: 0 none;
+    box-shadow: 0 0.4em 0.5em 0 rgba(0,0,0,0.14), 0 0.1em 1em 0 rgba(0,0,0,0.12), 0 0.2em 0.4em -0.1em rgba(0,0,0,0.3);
+  }
 }
 /*********************************/
