--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -59,23 +59,6 @@ p.sep:after {
   display: none !important;
 }
 /*********************************/
-.photoswipe {
-  list-style: none;
-}
-.photoswipe li {
-  margin: 0;
-}
-#jaroslav_honzajk {
-  margin-top: 2.5em;
-}
-#jaroslav_honzajk + p {
-  max-width: 14em;
-}
-#jaroslav_honzajk + p + div + p {
-  text-align: center;
-  max-width: 27em;
-}
-/*********************************/
 #header {
   position: absolute;
   width: 100%;
@@ -90,7 +73,7 @@ p.sep:after {
 .hdesc.steakgrill {
   color: white;
   padding: 5em 0 6em 0;
-  background: url("/files/design/header.jpg") no-repeat;
+  background: url("/files/full/design/header.jpg") no-repeat;
   background-size: cover;
   background-position: 50% top;
 }
@@ -150,5 +133,32 @@ svg.fa-facebook {
     outline: 0 none;
     box-shadow: 0 0.4em 0.5em 0 rgba(0,0,0,0.14), 0 0.1em 1em 0 rgba(0,0,0,0.12), 0 0.2em 0.4em -0.1em rgba(0,0,0,0.3);
   }
+}
+/*********************************/
+.photoswipe {
+  list-style: none;
+}
+.photoswipe li {
+  margin: 0;
+}
+/*********************************/
+#jaroslav_honzajk {
+  margin-top: 2.5em;
+}
+#jaroslav_honzajk + p {
+  max-width: 14em;
+}
+#jaroslav_honzajk + p + div + p {
+  text-align: center;
+  max-width: 27em;
+}
+/*********************************/
+.part {
+  padding: 0.1em 0;
+}
+.part.about_us {
+  background: url("/files/full/design/about.jpg") top right no-repeat;
+  background-size: cover;
+  color: white;
 }
 /*********************************/
