--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -119,6 +119,7 @@ svg.fa-facebook {
   #content .button {
     box-shadow: 0 0.1em 0.1em 0 rgba(0,0,0,.14), 0 0.15em 0.05em -0.1em rgba(0,0,0,.12), 0 0.05em 0.25em 0 rgba(0,0,0,.2);
     background: white;
+    min-width: 10em;
   }
   #content .button-list {
     display: flex;
