--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -125,6 +125,7 @@ svg.fa-facebook {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0;
   }
   .button-list li {
     margin: 0.5em;
