--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -239,3 +239,7 @@ svg.fa-facebook {
   }
 }
 /*********************************/
+#references {
+  display: none;
+}
+/*********************************/
