--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -90,6 +90,12 @@ p.sep:after {
   position: relative;
 }
 /*********************************/
+#footer {
+  background: #000;
+  color: white;
+  font-weight: 800;
+}
+/*********************************/
 #content .button {
   font-size: 0.75em;
   font-weight: 500;
