--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -17,6 +17,7 @@ h1 {
 strong {
   font-weight: 600;
 }
+#footer a,
 #content a {
   color: #b6150d;
   border-bottom: 0 none;
@@ -97,6 +98,9 @@ p.sep:after {
   background: #000;
   color: white;
   font-weight: 800;
+}
+#footer a {
+  color: white;
 }
 /*********************************/
 #content .button {
