--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -52,7 +52,7 @@ p.sep:after {
   width: 1.25em;
   height: 0.3em;
   background: url("/files/design/sep.png") no-repeat;
-  background-size: contain;
+  background-size: cover;
   margin: 1rem auto 2rem;
 }
 /*********************************/
@@ -199,7 +199,7 @@ svg.fa-facebook {
 }
 .part.contact .sep:after,
 .part.about_us .sep:after {
-  background: url("/files/design/sep-white.png");
+  background-image: url("/files/design/sep-white.png");
 }
 /*********************************/
 .daily_offer,
@@ -281,9 +281,9 @@ svg.fa-facebook {
   margin: 0;
 }
 .part.references dt + dd {
-  font-size: 1.2em;
+  font-size: 1.5em;
   max-width: 15em;
-  margin: 1em auto;
+  margin: 1em auto 0.5em auto;
 }
 .part.references dt + dd q:before,
 .part.references dt + dd q:after {
