--- a/themes/default/columns.css
+++ b/themes/default/columns.css
@@ -11,16 +11,17 @@ div.list.multiple div > * {
   margin: 0.5em 0;
   padding: 1em;
 }
-@media (min-width: 33em) {
+/*********************************
+@media (min-width: 50em) {
   div.list.multiple div > *:not(.meal) {
     flex: 0 1 50%;
     max-width: 50%;
   }
 }
-@media (min-width: 52em) {
+@media (min-width: 62em) {
   div.list.multiple div > *:not(.meal) {
     flex: 0 1 33.33%;
     max-width: 33.3%;
   }
 }
-/*********************************/
+*********************************/
