--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -34,9 +34,9 @@ h1 {
   }
 }
 h2, h3 {
-  font-weight: 600;
+  font-weight: normal;
   font-size: 2.5em;
-  margin-bottom: 1rem;
+  margin-bottom: 0.75em;
   text-align: center;
 }
 h2 + p,
@@ -188,9 +188,6 @@ svg.fa-facebook {
   .button-list li {
     flex: 0 1 auto;
   }
-  #content .button-img-inline {
-
-  }
   #content .button-img-inline svg {
     flex: 0 1 auto;
     margin-right: 0.5em;
@@ -261,6 +258,11 @@ svg.fa-facebook {
 .daily_offer h3 + p,
 .weekend_events h3 + p {
   max-width: 17em;
+}
+/*********************************/
+#content .contact .button-list {
+  margin-top: 0;
+  margin-bottom: 15em;
 }
 /*********************************/
 #content .meal {
@@ -347,9 +349,12 @@ svg.fa-facebook {
   
 }
 /*********************************/
-.card {
+#content .card {
   background: rgba(255, 255, 255, 0.85);
   color: black;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25em;
 }
 .card dd {
   margin-left: 0;
