--- a/themes/default/all.css
+++ b/themes/default/all.css
@@ -4,9 +4,11 @@ div.paragraph, div.list, pre {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
-#content, #header > *, #footer > * {
-  max-width: 62rem;
+body > .hdesc,
+.section > .jaroslav_honzajk,
+#header > *,
+#footer > * {
+  max-width: 70rem;
   margin-left: auto;
   margin-right: auto;
   box-sizing: border-box;
