--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -308,6 +308,10 @@ svg.fa-facebook {
   text-align: center;
   max-width: 27em;
 }
+.jaroslav_honzajk .photoswipe img {
+  width: 35em;
+  max-width: 100%;
+}
 @media all and (min-width: 62em) {
   .jaroslav_honzajk > div {
     position: relative;
@@ -328,6 +332,13 @@ svg.fa-facebook {
   .jaroslav_honzajk h2 + p {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+  .jaroslav_honzajk .photoswipe img {
+    width: 38em;
+    max-width: 50vw;
+  }
+  #content .jaroslav_honzajk .button-list {
+    margin-top: 10em;
   }
 }
 /*********************************/
