--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -239,10 +239,23 @@ svg.fa-facebook {
   background-image: url("/files/design/sep-white.png");
 }
 /*********************************/
-.menu > div > .section {
+.menu {
+  padding: 4em 0;
+}
+#content .menu > div {
+  max-width: 100em;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
+}
+.menu .contentbalancer-simple {
+  display: none;
+}
+.menu-nested {
+  margin: 1rem;
+}
+#content .menu .button-list {
+  margin-top: 0;
 }
 .daily_offer,
 .weekend_events {
@@ -252,14 +265,11 @@ svg.fa-facebook {
   border-radius: 0.25em;
   padding: 2em 0;
   width: 100%;
-  max-width: 40em;
+  max-width: 38em;
 }
 .daily_offer h3,
 .weekend_events h3 {
   margin-top: 0.5em;
-}
-.menu > div > .contentbalancer-simple {
-  display: none;
 }
 .daily_offer h3 + p,
 .weekend_events h3 + p {
