--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -39,12 +39,12 @@ h2, h3 {
   margin-bottom: 0.75em;
   text-align: center;
 }
-h2 + p,
-h3 + p {
+p.description {
   font-style: italic;
   font-size: 1.5em;
   margin-top: 1rem;
   text-align: center;
+  max-width: 30em;
 }
 p.description:after {
   content: "";
