--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -268,7 +268,7 @@ svg.fa-facebook {
 .daily_offer,
 .weekend_events {
   box-shadow: 0 0.1em 0.1em 0 rgba(0,0,0,.14), 0 0.15em 0.05em -0.1em rgba(0,0,0,.12), 0 0.05em 0.25em 0 rgba(0,0,0,.2);
-  margin: 1em;
+  margin: 1em auto;
   background: white;
   border-radius: 0.25em;
   padding: 2em 0;
@@ -276,7 +276,9 @@ svg.fa-facebook {
   max-width: 38em;
 }
 .daily_offer h3,
-.weekend_events h3 {
+.daily_offer h2,
+.weekend_events h3,
+.weekend_events h2 {
   margin-top: 0.5em;
 }
 .daily_offer p.description,
