--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -332,9 +332,11 @@ svg.fa-facebook {
   }
 }
 /*********************************/
+.soups h2,
 .jaroslav_honzajk h2 {
-  margin-top: 2em;
+  margin-top: 4em;
 }
+.soups h2 + p,
 .jaroslav_honzajk h2 + p {
   max-width: 14em;
 }
@@ -342,19 +344,24 @@ svg.fa-facebook {
   text-align: center;
   max-width: 27em;
 }
+.soups .photoswipe img,
 .jaroslav_honzajk .photoswipe img {
   width: 35em;
   max-width: 100%;
 }
 @media all and (min-width: 62em) {
+  .soups > div ,
   .jaroslav_honzajk > div {
     position: relative;
   }
+  .soups h2 + p + .list,
   .jaroslav_honzajk h2 + p + .list {
     position: absolute;
     top: 2.8em;
     right: 0;
   }
+  .soups h2,
+  .soups h2 + p,
   .jaroslav_honzajk h2,
   .jaroslav_honzajk h2 + p,
   .jaroslav_honzajk h2 + p + div + p {
